# teamX_challenge

./: README.md  docker-compose111.yml  常用指令.txt
doc/: objectpublic.md
install/: local_setup.sh  setup.sh
install/arrow_run/share/arrow_run/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/camera/share/camera/: local_setup.sh  package.sh  package.xml
install/camera_sim_pkg/share/camera_sim_pkg/: local_setup.sh  package.sh
install/circle/share/circle/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pose_msg/share/pose_msg/: local_setup.sh  package.sh
install/rect_move/share/rect_move/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  (+1 more)
results/: TEAM11_results1 (1).json  TEAM11_results1.json (1).sha256  TEAM11_results2.json  TEAM11_results2.json.sha256  TEAM11_results3.json  TEAM11_results3.json.sha256  TEAM11_results4.json  TEAM11_results4.json.sha256  TEAM11_results5.json  TEAM11_results5.json.sha256  armorTEAMENAME11_results0.json  armorTEAMENAME11_results0.json.sha256  rectTEAMENAME11_results0.json  rectTEAMENAME11_results0.json.sha256  sphereTEAMENAME11_results0.json  sphereTEAMENAME11_results0.json.sha256
src/teamx_challenge/: CMakeLists.txt  package.xml
src/teamx_challenge/launch/: shooter.launch.py  vision.launch.py
src/teamx_challenge/src/: shooter_node.cpp  vision_node.cpp
src/teamx_challenge/src/codewhilecompeting/: armor_visionnode.cpp  shooter_node.cpp  vision_node.cpp
(+43 files in other folders)
